@@ -1,3 +1,14 @@
+2008-07-05  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/test-pokerinteractor.py.in
+	(PokerInteractorTestCase.test_highestBetIncreaseCancelCall): Added
+	checks for output.
+	(PokerFactoryMockup.getMessages): Wrote method.
+	(PokerFactoryMockup.message): Wrote method.
+	(PokerFactoryMockup.clearMessages): Wrote method.
+	(PokerFactoryMockup.__init__): Added call to clearMessages.
+	Increased verbosity.
+
 2008-07-04  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* tests/test-upgrade.py.in (UpgraderTestCase.test05_getUpgrader):
